<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserGuide">

    <android.support.v7.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        tools:context=".UserGuide">

        <ImageButton
            android:id="@+id/m_t_backug"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:src="@drawable/baseline_arrow_back_black_18dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_UG"
            android:textColor="@color/quantum_white_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <!--<ScrollView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_marginTop="48dp"-->
    <!--android:background="@color/BackGroundPage">-->

    <LinearLayout
        android:id="@+id/ly_arrival_time"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_link1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/info_link1"
            android:textColorLink="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_fees"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="160dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_link2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/info_link2"
            android:textColorLink="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly_fine"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="240dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_link3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/info_link3"
            android:textColorLink="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>