<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <android.support.v7.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        tools:context=".HelpPage">
        <ImageButton
            android:id="@+id/m_t_backa"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:src="@drawable/baseline_arrow_back_black_18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_about_f"
            android:textColor="@color/quantum_white_text"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="48dp"
        android:background="@color/BackGroundPage">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:layout_marginTop="30dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="What is Seek Parking ?"
                android:textColor="@color/quantum_white_text"
                android:textSize="20sp"
                android:textStyle="bold" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="@string/app_description"
                android:textColor="@color/quantum_white_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/smartparking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="Copy rights and Licences"
                android:textColor="@color/quantum_white_text"
                android:textSize="20sp"
                android:textStyle="bold" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="@string/copyright_content"
                android:textColor="@color/quantum_white_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="Limitation of Liability"
                android:textColor="@color/quantum_white_text"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="We do not hold liability for :"
                android:textColor="@color/quantum_white_text"
                android:textSize="16sp"
                android:textStyle="normal" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:text="@string/liability_content"
                android:textColor="@color/quantum_white_text"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>